--- a/src/ElementModal/ElementModal.css
+++ b/src/ElementModal/ElementModal.css
@@ -28,12 +28,14 @@
 .element-modal .modal-close {
   position: absolute;
   right: 1rem;
-  top: 1rem;
+  top: 1.6rem;
   cursor: pointer;
 }
 
 .element-modal strong {
   font-size: 20px;
+  display: block;
+  margin-bottom: 1.1rem;
 }
 
 .element-modal span {
@@ -45,4 +47,15 @@
 
 .element-modal .block {
   text-transform: capitalize;
+}
+
+p {
+  margin-bottom: 1rem;
+}
+
+@media screen and (max-width: 975px) {
+  .element-modal {
+    width: 75%;
+    overflow: hidden;
+  }
 }
